[package]
name = "ground_control"
version = "0.1.0"
authors = ["Dan Crank <danno@danno.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-interface = "0.4.0"
linux-embedded-hal = "0.3.0"
rfm69 = "0.4.0"               # radio chipset
rppal = { version = "0.12.0", features = ["hal"] }
ssd1306 = "0.5.2"             # OLED display on radio bonnet