[package]
name = "ground_control"
version = "0.1.0"
authors = ["Dan Crank <danno@danno.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
display-interface = "0.4.0"
error-chain = "0.12.4"
linux-embedded-hal = "0.3.0"
rfm69 = "0.4.0"
rmp = "0.8.10"
rmp-serde = "0.15.4"
rppal = { version = "0.12.0", features = ["hal"] }
serde = "1.0.125"
serde_derive = "1.0.125"
ssd1306 = "0.5.2"