[package]
name = "ground_control"
version = "0.1.0"
authors = ["Dan Crank <danno@danno.org>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
display-interface = "0.4.0"
error-chain = "0.12.4"
linux-embedded-hal = "0.3.0"
rfm69 = "0.4.0"
rppal = { version = "0.12.0", features = ["hal"] }
ssd1306 = "0.5.2"
